@@ -18,7 +18,6 @@ package ru.keich.mon.servicemanager.entity;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.http.ResponseEntity;
 import org.springframework.util.MultiValueMap;
@@ -46,7 +45,7 @@ public class EntityController<K, T extends Entity<K>> {
 		var filters = reqParam.entrySet().stream()
 		.flatMap(param -> {
 			return param.getValue().stream().map(value -> new Filter(param.getKey(),value));
-		}).collect(Collectors.toList());
+		}).toList();
 		var out = entityService.query(filters);
 		return ResponseEntity.ok(out);
 	}
