@@ -24,7 +24,6 @@ import java.util.Set;
 import java.util.SortedMap;
 import java.util.TreeMap;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 public class IndexSorted<K, T extends BaseEntity<K>> implements Index<K, T> {
 	private final Function<T, Set<Object>> mapper;
@@ -63,18 +62,18 @@ public class IndexSorted<K, T extends BaseEntity<K>> implements Index<K, T> {
 	@Override
 	public List<K> get(Object key) {
 		return Optional.ofNullable(objects.get(key))
-				.map(s -> s.stream().collect(Collectors.toList()))
+				.map(s -> s.stream().toList())
 				.orElse(Collections.emptyList());
 	}
 
 	@Override
 	public List<K> getBefore(Object key) {
-		return objects.headMap(key).values().stream().flatMap(l -> l.stream()).collect(Collectors.toList());
+		return objects.headMap(key).values().stream().flatMap(l -> l.stream()).toList();
 	}
 
 	@Override
 	public List<K> getAfter(Object key) {
-		return objects.tailMap(key).values().stream().flatMap(l -> l.stream()).collect(Collectors.toList());
+		return objects.tailMap(key).values().stream().flatMap(l -> l.stream()).toList();
 	}
 
 }
